--- a/module/web/src/main/resources/application-mysql-dev.yml
+++ b/module/web/src/main/resources/application-mysql-dev.yml
@@ -7,7 +7,7 @@ spring:
       restart:
         enabled: true
   datasource:
-        url: jdbc:mysql://localhost:3306/lenos?useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://localhost:3306/koko?useUnicode=true&characterEncoding=UTF-8
         username: root
         password: root
         # 使用druid数据源
@@ -57,7 +57,7 @@ pagehelper:
 
 koko:
   uploadPath: ./file/upload
-  isDayType: false
+  isDayType: true
 
   imagePath: ./file/image
 
